--- a/apply_to/pubspec.yaml
+++ b/apply_to/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
   easy_localization: ^3.0.7+1
+  carousel_slider: ^5.1.1
+  path_provider: ^2.1.5
+  hydrated_bloc: ^10.0.0
 
 dev_dependencies:
   flutter_test:
