slider images loading handling and its exception

--- a/apply_to/pubspec.yaml
+++ b/apply_to/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   carousel_slider: ^5.1.1
   path_provider: ^2.1.5
   hydrated_bloc: ^10.0.0
+  equatable: ^2.0.7
+  skeletonizer: ^2.1.0+1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
